updated multimodal training scripts

--- a/multimodal_fusion.ipynb
+++ b/multimodal_fusion.ipynb
@@ -10,21 +10,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": 3
   },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
+  "orig_nbformat": 2
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,41 +41,14 @@
     "from functions import create_pytorch_dataset, create_multimodal_pytorch_dataset\n",
     "from functions import get_window_metrics\n",
     "from functions import get_frame_metrics\n",
-    "from functions import animate\n"
+    "from functions import animate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Edits/ONI_IR\n",
-      "Edits/ONI_Depth\n",
-      "ONI_IR_Edit\n",
-      "ONI_IR_Depth\n",
-      "H5Data\\data_set-ONI_IR_Edit-imgdim64x64.h5\n",
-      "Edits/ONI_IR\n",
-      "ONI_IR_Edit\n",
-      "H5Data\\data_set-ONI_IR_Edit-imgdim64x64.h5\n",
-      "258\n",
-      "258\n",
-      "68\n",
-      "68\n",
-      "H5Data\\data_set-ONI_IR_Depth-imgdim64x64.h5\n",
-      "Edits/ONI_Depth\n",
-      "ONI_IR_Depth\n",
-      "H5Data\\data_set-ONI_IR_Depth-imgdim64x64.h5\n",
-      "258\n",
-      "258\n",
-      "68\n",
-      "68\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lets load the H%PY dataset into a pytorch dataset class.Please see \n",
     "# dataset_creator on how to generate the H5PY file. \n",
@@ -94,15 +62,12 @@
     "window_len = 8\n",
     "stride = 1\n",
     "\n",
-    "Test_Dataset, test_dataloader, Train_Dataset, train_dataloader = create_multimodal_pytorch_dataset(name, dset, path, window_len, stride)\n",
-    "\n",
-    "\n",
-    "\n"
+    "Test_Dataset, test_dataloader, Train_Dataset, train_dataloader = create_multimodal_pytorch_dataset(name, dset, path, window_len, stride)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,12 +99,35 @@
     "        # final inverse\n",
     "        self.dc4 = nn.ConvTranspose3d(16, 1, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
     "\n",
-    "    def forward(self, x):\n",
+    "        # first layer\n",
+    "        self.2ec1 = nn.Conv3d(1, 16, (5, 3, 3), stride=1, padding=(2, 1, 1),)\n",
+    "        self.2em1 = nn.MaxPool3d((1, 2, 2), return_indices=True)\n",
+    "        self.2ed1 = nn.Dropout3d(p=0.25)\n",
+    "        # second layer\n",
+    "        self.2ec2 = nn.Conv3d(16, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.2em2 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
+    "        self.2ed2 = nn.Dropout3d(p=0.25)\n",
+    "        # third layer\n",
+    "        self.2ec3 = nn.Conv3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.2em3 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
+    "        # encoding done, time to decode\n",
+    "        self.2dc1 = nn.ConvTranspose3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.2dm1 = nn.MaxUnpool3d((2, 2, 2))\n",
+    "        # inverse of 2nd Conv\n",
+    "        self.2dc2 = nn.ConvTranspose3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.2dm2 = nn.MaxUnpool3d((2, 2, 2))\n",
+    "        # inverse of 1st Conv\n",
+    "        self.2dc3 = nn.ConvTranspose3d(8, 16, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.2dm3 = nn.MaxUnpool3d((1, 2, 2))\n",
+    "        # final inverse\n",
+    "        self.2dc4 = nn.ConvTranspose3d(16, 1, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "\n",
+    "    def forward(self, x1, x2):\n",
     "        # *** start of encoder\n",
-    "        x = x.permute(1, 0, 2, 3, 4)  # reorder to have correct dimensions\n",
+    "        x1 = x1.permute(1, 0, 2, 3, 4)  # reorder to have correct dimensions\n",
     "        # (batch_size, chanels, depth, width, height)\n",
-    "        _ec1 = F.relu(self.ec1(x))\n",
-    "        _em1, i1 =         self.em1(_ec1)\n",
+    "        _ec1 = F.relu(self.ec1(x1))\n",
+    "        _em1, i1 = self.em1(_ec1)\n",
     "        _ec1 = self.ed1(_ec1)\n",
     "        # second layer\n",
     "        _ec2 = F.relu(self.ec2(_em1))\n",
@@ -148,9 +136,28 @@
     "        # third layer\n",
     "        _ec3 = F.relu(self.ec3(_em2))\n",
     "        _em3, i3 = self.em3(_ec3)\n",
+    "\n",
+    "        x2 = x2.permute(1, 0, 2, 3, 4)  # reorder to have correct dimensions\n",
+    "        # (batch_size, chanels, depth, width, height)\n",
+    "        _2ec1 = F.relu(self.2ec1(x2))\n",
+    "        _2em1, i1 = self.2em1(_2ec1)\n",
+    "        _2ec1 = self.2ed1(_2ec1)\n",
+    "        # second layer\n",
+    "        _2ec2 = F.relu(self.2ec2(_2em1))\n",
+    "        _2em2, i2 = self.2em2(_2ec2)\n",
+    "        _2em2 = self.2ed2(_2em2)\n",
+    "        # third layer\n",
+    "        _2ec3 = F.relu(self.2ec3(_2em2))\n",
+    "        _2em3, i3 = self.2em3(_2ec3)\n",
+    "\n",
+    "        # combined modalaties here \n",
+    "        combo1 = (_2ec3*0.5) * _em3\n",
+    "        combo2 = _2ec3 * (_em3*0.5)\n",
+    "\n",
+    "\n",
     "        # print(\"====== Encoding Done =========\")\n",
     "        # *** encoding done, time to decode\n",
-    "        _dc1 = F.relu(self.dc1(_em3))\n",
+    "        _dc1 = F.relu(self.dc1(combo1))\n",
     "        _dm1 = self.dm1(_dc1, i3, output_size=_em2.size())\n",
     "        # second layer\n",
     "        _dc2 = F.relu(self.dc2(_dm1))\n",
@@ -159,23 +166,27 @@
     "        _dc3 = F.relu(self.dc3(_dm2))\n",
     "        _dm3 = self.dm3(_dc3, i1)\n",
     "\n",
-    "        re_x = torch.tanh(self.dc4(_dm3))\n",
-    "        return re_x"
+    "        re_x1 = torch.tanh(self.2dc4(combo2))\n",
+    "        # *** encoding done, time to decode\n",
+    "        _2dc1 = F.relu(self.2dc1(_em3))\n",
+    "        _2dm1 = self.2dm1(_2dc1, i3, output_size = _2em2.size())\n",
+    "        # second layer\n",
+    "        _2dc2 = F.relu(self.2dc2(_2dm1))\n",
+    "        _2dm2 = self.2dm2(_2dc2, i2)\n",
+    "        # third layer\n",
+    "        _2dc3 = F.relu(self.2dc3(_2dm2))\n",
+    "        _2dm3 = self.2dm3(_2dc3, i1)\n",
+    "\n",
+    "        re_x2 = torch.tanh(self.2dc4(_2dm3))\n",
+    "\n",
+    "        return re_x1, re_x2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now lets train our model\n",
     "\n",
@@ -194,59 +205,54 @@
     "forward_chunk_size = 8 # this is smaller due to memory constrains \n",
     "\n",
     "# select which model - you could load your own or put it in the function above\n",
-    "models = []\n",
-    "for i in range(len(name)):\n",
-    "    models.append(Autoencoder().to(device))\n",
+    "model = Autoencoder().to(device)\n",
     "\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
-    "optimizers = []\n",
-    "for i in range(len(name)):\n",
-    "    optimizers.append(torch.optim.Adam(models[i].parameters(), lr=learning_rate))"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "for i, sample in enumerate(train_dataloader):\n",
-    "    x_modality = []\n",
-    "    y_modality = []\n",
-    "    for j, modalities in enumerate(sample):\n",
-    "        if j == 1: # skip labels\n",
-    "            continue\n",
-    "        for modality in range(len(x_modality)):\n",
-    "            # train each model independantly \n",
-    "            model = models[modality]\n",
-    "            optimizer = optimizers[modality]\n",
-    "            sample = x_modality[modality]\n",
-    "            # label = y_modality[modality] # dont need label for training\n",
-    "            sample = sample.to(device, dtype=torch.float)\n",
-    "            # split sample into smaller sizes due to GPU memory constraints\n",
-    "            chunks = torch.split(sample, chunk_size, dim=1)\n",
-    "            for chunk in chunks:\n",
-    "                output = model(chunk)\n",
-    "                output = output.to(device).permute(1, 0, 2, 3, 4)\n",
-    "                model.zero_grad()\n",
-    "                loss = loss_fn(output, chunk)\n",
-    "                # ===================backward====================\n",
-    "                # Getting gradients w.r.t. parameters\n",
-    "                loss.backward()\n",
-    "                # Updating parameters\n",
-    "                optimizer.step()\n",
-    "                # Clear gradients w.r.t. parameters\n",
-    "                optimizer.zero_grad()\n",
-    "                torch.cuda.empty_cache()\n",
-    "                \n",
-    "        # ===================log========================\n",
-    "        print(\"epoch [{}/{}], loss:{:.4f}\".format(epoch + 1, num_epochs, loss.item()))\n",
-    "        torch.save(model.state_dict(), filepath) # save the model each epoch at location filepath\n",
-    "        \n"
+    "def train_model(filepath):\n",
+    "    model.train()\n",
+    "    for epoch in range(num_epochs):\n",
+    "        val_loss = 0\n",
+    "        for i, sample in enumerate(train_dataloader):\n",
+    "            x_modality = []\n",
+    "            y_modality = []\n",
+    "            for j, modalities in enumerate(sample):\n",
+    "                if j == 1: # skip labels\n",
+    "                    continue\n",
+    "                sample1 = x_modality[0]\n",
+    "                sample2 = x_modality[1]\n",
+    "                # label = y_modality[modality] # dont need label for training\n",
+    "                sample = sample.to(device, dtype=torch.float)\n",
+    "                # split sample into smaller sizes due to GPU memory constraints\n",
+    "                chunks = torch.split(sample, chunk_size, dim=1)\n",
+    "                for chunk in chunks:\n",
+    "                    output = model(chunk)\n",
+    "                    output = output.to(device).permute(1, 0, 2, 3, 4)\n",
+    "                    model.zero_grad()\n",
+    "                    loss = loss_fn(output, chunk)\n",
+    "                    # ===================backward====================\n",
+    "                    # Getting gradients w.r.t. parameters\n",
+    "                    loss.backward()\n",
+    "                    # Updating parameters\n",
+    "                    optimizer.step()\n",
+    "                    # Clear gradients w.r.t. parameters\n",
+    "                    optimizer.zero_grad()\n",
+    "                    torch.cuda.empty_cache()\n",
+    "                        \n",
+    "                # ===================log========================\n",
+    "                print(\"epoch [{}/{}], loss:{:.4f}\".format(epoch + 1, num_epochs, loss.item()))\n",
+    "                torch.save(model.state_dict(), filepath) # save the model each epoch at location filepath\n",
+    "        "
    ]
   },
   {
@@ -301,6 +307,48 @@
     "                    \n",
     "\n",
     "    return(frame_stats, window_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = str(datetime.datetime.today().strftime(\"%Y-%m-%d-%H-%M-%S\"))\n",
+    "print(start_time)\n",
+    "filepath = (\n",
+    "    \"Models\\\\\"\n",
+    "    + dset \n",
+    "    + 'RegularLoss'\n",
+    "    + start_time\n",
+    ")\n",
+    "#filepath = 'Models\\Edits\\ONI_Depth2020-11-26-10-07-38'\n",
+    "print(filepath)\n",
+    "train_model(filepath)\n",
+    "import functions\n",
+    "from functions import animate\n",
+    "\n",
+    "\n",
+    "frame_stats, window_stats = foward_pass(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functions\n",
+    "from functions import get_total_performance_metrics\n",
+    "from importlib import reload\n",
+    "reload(functions)\n",
+    "from functions import get_total_performance_metrics\n",
+    "\n",
+    "get_total_performance_metrics(frame_stats, window_stats, window_len)\n",
+    "\n",
+    "\n",
+    "#get_total_performance_metrics(originals, reconstruced, testing_labels, window_len)"
    ]
   }
  ]
