- trained and got results from a multimodal model

--- a/multimodal_fusion.ipynb
+++ b/multimodal_fusion.ipynb
@@ -10,16 +10,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.3-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +51,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Edits/ONI_IR\n",
+      "Edits/ONI_Depth\n",
+      "ONI_IR_Edit\n",
+      "ONI_IR_Depth\n",
+      "H5Data\\data_set-ONI_IR_Edit-imgdim64x64.h5\n",
+      "Edits/ONI_IR\n",
+      "ONI_IR_Edit\n",
+      "H5Data\\data_set-ONI_IR_Edit-imgdim64x64.h5\n",
+      "258\n",
+      "258\n",
+      "68\n",
+      "68\n",
+      "H5Data\\data_set-ONI_IR_Depth-imgdim64x64.h5\n",
+      "Edits/ONI_Depth\n",
+      "ONI_IR_Depth\n",
+      "H5Data\\data_set-ONI_IR_Depth-imgdim64x64.h5\n",
+      "258\n",
+      "258\n",
+      "68\n",
+      "68\n"
+     ]
+    }
+   ],
    "source": [
     "# Lets load the H%PY dataset into a pytorch dataset class.Please see \n",
     "# dataset_creator on how to generate the H5PY file. \n",
@@ -67,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,29 +132,30 @@
     "        self.dc4 = nn.ConvTranspose3d(16, 1, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
     "\n",
     "        # first layer\n",
-    "        self.2ec1 = nn.Conv3d(1, 16, (5, 3, 3), stride=1, padding=(2, 1, 1),)\n",
-    "        self.2em1 = nn.MaxPool3d((1, 2, 2), return_indices=True)\n",
-    "        self.2ed1 = nn.Dropout3d(p=0.25)\n",
+    "        self.ec21 = nn.Conv3d(1, 16, (5, 3, 3), stride=1, padding=(2, 1, 1),)\n",
+    "        self.em21 = nn.MaxPool3d((1, 2, 2), return_indices=True)\n",
+    "        self.ed21 = nn.Dropout3d(p=0.25)\n",
     "        # second layer\n",
-    "        self.2ec2 = nn.Conv3d(16, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
-    "        self.2em2 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
-    "        self.2ed2 = nn.Dropout3d(p=0.25)\n",
+    "        self.ec22 = nn.Conv3d(16, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.em22 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
+    "        self.ed22 = nn.Dropout3d(p=0.25)\n",
     "        # third layer\n",
-    "        self.2ec3 = nn.Conv3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
-    "        self.2em3 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
+    "        self.ec23 = nn.Conv3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.em23 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
     "        # encoding done, time to decode\n",
-    "        self.2dc1 = nn.ConvTranspose3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
-    "        self.2dm1 = nn.MaxUnpool3d((2, 2, 2))\n",
+    "        self.dc21 = nn.ConvTranspose3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.dm21 = nn.MaxUnpool3d((2, 2, 2))\n",
     "        # inverse of 2nd Conv\n",
-    "        self.2dc2 = nn.ConvTranspose3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
-    "        self.2dm2 = nn.MaxUnpool3d((2, 2, 2))\n",
+    "        self.dc22 = nn.ConvTranspose3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.dm22 = nn.MaxUnpool3d((2, 2, 2))\n",
     "        # inverse of 1st Conv\n",
-    "        self.2dc3 = nn.ConvTranspose3d(8, 16, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
-    "        self.2dm3 = nn.MaxUnpool3d((1, 2, 2))\n",
+    "        self.dc23 = nn.ConvTranspose3d(8, 16, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.dm23 = nn.MaxUnpool3d((1, 2, 2))\n",
     "        # final inverse\n",
-    "        self.2dc4 = nn.ConvTranspose3d(16, 1, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
+    "        self.dc24 = nn.ConvTranspose3d(16, 1, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
     "\n",
     "    def forward(self, x1, x2):\n",
+    "\n",
     "        # *** start of encoder\n",
     "        x1 = x1.permute(1, 0, 2, 3, 4)  # reorder to have correct dimensions\n",
     "        # (batch_size, chanels, depth, width, height)\n",
@@ -137,22 +170,23 @@
     "        _ec3 = F.relu(self.ec3(_em2))\n",
     "        _em3, i3 = self.em3(_ec3)\n",
     "\n",
+    "        \n",
     "        x2 = x2.permute(1, 0, 2, 3, 4)  # reorder to have correct dimensions\n",
     "        # (batch_size, chanels, depth, width, height)\n",
-    "        _2ec1 = F.relu(self.2ec1(x2))\n",
-    "        _2em1, i1 = self.2em1(_2ec1)\n",
-    "        _2ec1 = self.2ed1(_2ec1)\n",
+    "        _ec21 = F.relu(self.ec21(x2))\n",
+    "        _em21, i1 = self.em21(_ec21)\n",
+    "        _ec21 = self.ed21(_ec21)\n",
     "        # second layer\n",
-    "        _2ec2 = F.relu(self.2ec2(_2em1))\n",
-    "        _2em2, i2 = self.2em2(_2ec2)\n",
-    "        _2em2 = self.2ed2(_2em2)\n",
+    "        _ec22 = F.relu(self.ec22(_em21))\n",
+    "        _em22, i2 = self.em22(_ec22)\n",
+    "        _em22 = self.ed22(_em22)\n",
     "        # third layer\n",
-    "        _2ec3 = F.relu(self.2ec3(_2em2))\n",
-    "        _2em3, i3 = self.2em3(_2ec3)\n",
+    "        _ec23 = F.relu(self.ec23(_em22))\n",
+    "        _em23, i3 = self.em23(_ec23)\n",
     "\n",
     "        # combined modalaties here \n",
-    "        combo1 = (_2ec3*0.5) * _em3\n",
-    "        combo2 = _2ec3 * (_em3*0.5)\n",
+    "        combo1 = (_em23*0.5) * _em3\n",
+    "        combo2 = _em23 * (_em3*0.5)\n",
     "\n",
     "\n",
     "        # print(\"====== Encoding Done =========\")\n",
@@ -165,28 +199,36 @@
     "        # third layer\n",
     "        _dc3 = F.relu(self.dc3(_dm2))\n",
     "        _dm3 = self.dm3(_dc3, i1)\n",
+    "        re_x1 = torch.tanh(self.dc24(_dm3))\n",
     "\n",
-    "        re_x1 = torch.tanh(self.2dc4(combo2))\n",
     "        # *** encoding done, time to decode\n",
-    "        _2dc1 = F.relu(self.2dc1(_em3))\n",
-    "        _2dm1 = self.2dm1(_2dc1, i3, output_size = _2em2.size())\n",
+    "        _dc21 = F.relu(self.dc21(combo2))\n",
+    "        _dm21 = self.dm21(_dc21, i3, output_size = _em22.size())\n",
     "        # second layer\n",
-    "        _2dc2 = F.relu(self.2dc2(_2dm1))\n",
-    "        _2dm2 = self.2dm2(_2dc2, i2)\n",
+    "        _dc22 = F.relu(self.dc22(_dm21))\n",
+    "        _dm22 = self.dm22(_dc22, i2)\n",
     "        # third layer\n",
-    "        _2dc3 = F.relu(self.2dc3(_2dm2))\n",
-    "        _2dm3 = self.2dm3(_2dc3, i1)\n",
+    "        _dc23 = F.relu(self.dc23(_dm22))\n",
+    "        _dm23 = self.dm23(_dc23, i1)\n",
     "\n",
-    "        re_x2 = torch.tanh(self.2dc4(_2dm3))\n",
+    "        re_x2 = torch.tanh(self.dc24(_dm23))\n",
     "\n",
     "        return re_x1, re_x2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "# Now lets train our model\n",
     "\n",
@@ -200,7 +242,7 @@
     "dropout = 0.25\n",
     "learning_rate = 0.0002\n",
     "num_epochs = 20\n",
-    "chunk_size = 64\n",
+    "chunk_size = 128\n",
     "forward_chunk = 8 \n",
     "forward_chunk_size = 8 # this is smaller due to memory constrains \n",
     "\n",
@@ -209,12 +251,12 @@
     "\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate))"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,23 +265,35 @@
     "    model.train()\n",
     "    for epoch in range(num_epochs):\n",
     "        val_loss = 0\n",
-    "        for i, sample in enumerate(train_dataloader):\n",
+    "        for i, sample in enumerate(test_dataloader):\n",
     "            x_modality = []\n",
     "            y_modality = []\n",
     "            for j, modalities in enumerate(sample):\n",
-    "                if j == 1: # skip labels\n",
-    "                    continue\n",
+    "                if j == 0:\n",
+    "                    x_modality = modalities\n",
+    "                if j == 1:\n",
+    "                    y_modality = modalities\n",
+    "            for modality in range(len(x_modality)):\n",
     "                sample1 = x_modality[0]\n",
     "                sample2 = x_modality[1]\n",
     "                # label = y_modality[modality] # dont need label for training\n",
-    "                sample = sample.to(device, dtype=torch.float)\n",
+    "                sample1 = sample1.to(device, dtype=torch.float)\n",
+    "                sample2 = sample2.to(device, dtype=torch.float)\n",
+    "                if sample1.shape[1] > sample2.shape[1]:\n",
+    "                    sample1 = sample1[:, :sample2.shape[1], :, :, :]\n",
+    "                if sample1.shape[1] < sample2.shape[1]:\n",
+    "                    sample2 = sample2[:, :sample1.shape[1], :, :, :]\n",
     "                # split sample into smaller sizes due to GPU memory constraints\n",
-    "                chunks = torch.split(sample, chunk_size, dim=1)\n",
-    "                for chunk in chunks:\n",
-    "                    output = model(chunk)\n",
-    "                    output = output.to(device).permute(1, 0, 2, 3, 4)\n",
+    "                chunks1 = torch.split(sample1, chunk_size, dim=1)\n",
+    "                chunks2 = torch.split(sample2, chunk_size, dim=1)\n",
+    "                for k in range(len(chunks1)):\n",
+    "                    output1, output2 = model(chunks1[k], chunks2[k])\n",
+    "                    output1 = output1.to(device).permute(1, 0, 2, 3, 4)\n",
+    "                    output2 = output2.to(device).permute(1, 0, 2, 3, 4)\n",
     "                    model.zero_grad()\n",
-    "                    loss = loss_fn(output, chunk)\n",
+    "                    loss1 = loss_fn(output1, chunks1[k])\n",
+    "                    loss2 = loss_fn(output2, chunks2[k])\n",
+    "                    loss = loss1 + loss2\n",
     "                    # ===================backward====================\n",
     "                    # Getting gradients w.r.t. parameters\n",
     "                    loss.backward()\n",
@@ -248,24 +302,25 @@
     "                    # Clear gradients w.r.t. parameters\n",
     "                    optimizer.zero_grad()\n",
     "                    torch.cuda.empty_cache()\n",
-    "                        \n",
-    "                # ===================log========================\n",
-    "                print(\"epoch [{}/{}], loss:{:.4f}\".format(epoch + 1, num_epochs, loss.item()))\n",
-    "                torch.save(model.state_dict(), filepath) # save the model each epoch at location filepath\n",
-    "        "
+    "                            \n",
+    "        # ===================log========================\n",
+    "        print(\"epoch [{}/{}], loss:{:.4f}\".format(epoch + 1, num_epochs, loss.item()))\n",
+    "        torch.save(model.state_dict(), filepath) # save the model each epoch at location filepath\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def foward_pass(path):\n",
     "    model.load_state_dict(torch.load(path)) # load a saved model \n",
     "    model.eval()\n",
-    "    frame_stats = [] \n",
-    "    window_stats = [] \n",
+    "    frame_stats1 = [] \n",
+    "    window_stats1 = [] \n",
+    "    frame_stats2 = [] \n",
+    "    window_stats2 = [] \n",
     "\n",
     "    with torch.no_grad():\n",
     "        print(\"foward pass occuring\")\n",
@@ -278,66 +333,109 @@
     "                    x_modality = modalities\n",
     "                if j == 1:\n",
     "                    y_modality = modalities\n",
-    "                    \n",
     "            for modality in range(len(x_modality)):\n",
+    "                sample1 = x_modality[0]\n",
+    "                sample2 = x_modality[1]\n",
+    "                label1 = y_modality[0] # dont need label for training\n",
     "                torch.cuda.empty_cache()\n",
-    "                sample = sample.to(device, dtype=torch.float)\n",
-    "                chunks = torch.split(sample, forward_chunk, dim=1)\n",
-    "                recon_vid = []\n",
-    "                for chunk in chunks:\n",
-    "                    output = model(chunk)\n",
-    "                    output = output.to(device).permute(1, 0, 2, 3, 4)\n",
-    "                    recon_vid.append(output)\n",
+    "                sample1 = sample1.to(device, dtype=torch.float)\n",
+    "                sample2 = sample2.to(device, dtype=torch.float)\n",
+    "                if sample1.shape[1] > sample2.shape[1]:\n",
+    "                    sample1 = sample1[:, :sample2.shape[1], :, :, :]\n",
+    "                if sample1.shape[1] < sample2.shape[1]:\n",
+    "                    sample2 = sample2[:, :sample1.shape[1], :, :, :]\n",
+    "                # split sample into smaller sizes due to GPU memory constraints\n",
+    "                chunks1 = torch.split(sample1, chunk_size, dim=1)\n",
+    "                chunks2 = torch.split(sample2, chunk_size, dim=1)\n",
+    "                recon_vid1 = []\n",
+    "                recon_vid2 = []\n",
+    "                for k in range(len(chunks1)):\n",
+    "                    output1, output2 = model(chunks1[k], chunks2[k])\n",
+    "                    output1 = output1.to(device).permute(1, 0, 2, 3, 4)\n",
+    "                    output2 = output2.to(device).permute(1, 0, 2, 3, 4)\n",
+    "                    recon_vid1.append(output1)\n",
+    "                    recon_vid2.append(output2)\n",
     "                    torch.cuda.empty_cache()\n",
-    "    \n",
-    "                output = torch.cat(recon_vid, dim=1)\n",
+    "\n",
+    "                output1 = torch.cat(recon_vid1, dim=1)\n",
+    "                output2 = torch.cat(recon_vid2, dim=1)\n",
     "                # convert tensors to numpy arrays for easy manipluations\n",
-    "                sample = sample.data.cpu().numpy()\n",
-    "                output = output.data.cpu().numpy()\n",
-    "                labels = labels.data.cpu().numpy()\n",
+    "                sample = sample1.data.cpu().numpy()\n",
+    "                output = output1.data.cpu().numpy()\n",
+    "                labels = label1.data.cpu().numpy()\n",
     "\n",
     "                frame_mean, frame_std, frame_labels = get_frame_metrics(output, sample, labels, window_len)\n",
     "                mean_window_error, std_window_error, window_labels = get_window_metrics(output, sample, labels, window_len)\n",
-    "                frame_stats.append([frame_mean, frame_std, frame_labels])\n",
-    "                window_stats.append([mean_window_error, std_window_error, window_labels])\n",
-    "                    '''\n",
-    "                    if j % 50 == 0:\n",
-    "                        animate(sample[0, :, :, :, :], output[0, :, :, :, :], frame_mean, dset, start_time)\n",
-    "                    '''\n",
+    "                frame_stats1.append([frame_mean, frame_std, frame_labels])\n",
+    "                window_stats1.append([mean_window_error, std_window_error, window_labels])\n",
+    "\n",
+    "                sample = sample2.data.cpu().numpy()\n",
+    "                output = output2.data.cpu().numpy()\n",
+    "                labels = label1.data.cpu().numpy()\n",
+    "\n",
+    "                frame_mean, frame_std, frame_labels = get_frame_metrics(output, sample, labels, window_len)\n",
+    "                mean_window_error, std_window_error, window_labels = get_window_metrics(output, sample, labels, window_len)\n",
+    "                frame_stats2.append([frame_mean, frame_std, frame_labels])\n",
+    "                window_stats2.append([mean_window_error, std_window_error, window_labels])\n",
+    "\n",
+    "\n",
+    "                '''\n",
+    "                if j % 50 == 0:\n",
+    "                    animate(sample[0, :, :, :, :], output[0, :, :, :, :], frame_mean, dset, start_time)\n",
+    "                '''\n",
     "                    \n",
     "\n",
-    "    return(frame_stats, window_stats)"
+    "    return(frame_stats1, window_stats1, frame_stats2, window_stats2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2020-12-15-10-43-18\nfoward pass occuring\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = str(datetime.datetime.today().strftime(\"%Y-%m-%d-%H-%M-%S\"))\n",
     "print(start_time)\n",
     "filepath = (\n",
     "    \"Models\\\\\"\n",
-    "    + dset \n",
-    "    + 'RegularLoss'\n",
+    "    + 'MultiModalFusion'\n",
     "    + start_time\n",
     ")\n",
-    "#filepath = 'Models\\Edits\\ONI_Depth2020-11-26-10-07-38'\n",
-    "print(filepath)\n",
-    "train_model(filepath)\n",
+    "filepath = 'Models\\MultiModalFusion2020-12-14-15-52-54'\n",
+    "#print(filepath)\n",
+    "#train_model(filepath)\n",
     "import functions\n",
     "from functions import animate\n",
     "\n",
     "\n",
-    "frame_stats, window_stats = foward_pass(filepath)"
+    "frame_stats1, window_stats1, frame_stats2, window_stats2 = foward_pass(filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "516\n",
+      "(516, 5, 8)\n",
+      "saving\n",
+      "(516, 5, 8)\n",
+      "saving\n"
+     ]
+    }
+   ],
    "source": [
     "import functions\n",
     "from functions import get_total_performance_metrics\n",
@@ -345,11 +443,20 @@
     "reload(functions)\n",
     "from functions import get_total_performance_metrics\n",
     "\n",
-    "get_total_performance_metrics(frame_stats, window_stats, window_len)\n",
-    "\n",
+    "print(len(frame_stats1))\n",
+    "get_total_performance_metrics(frame_stats1, window_stats1, window_len)\n",
+    "input(\"Press Enter to continue...\")   \n",
+    "get_total_performance_metrics(frame_stats2, window_stats2, window_len)\n",
     "\n",
     "#get_total_performance_metrics(originals, reconstruced, testing_labels, window_len)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
