- dump of updates

--- a/multimodal_fusion.ipynb
+++ b/multimodal_fusion.ipynb
@@ -58,26 +58,26 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Edits/ONI_IR\n",
-      "Edits/ONI_Depth\n",
-      "ONI_IR_Edit\n",
-      "ONI_IR_Depth\n",
-      "H5Data\\data_set-ONI_IR_Edit-imgdim64x64.h5\n",
-      "Edits/ONI_IR\n",
-      "ONI_IR_Edit\n",
-      "H5Data\\data_set-ONI_IR_Edit-imgdim64x64.h5\n",
-      "258\n",
-      "258\n",
-      "68\n",
-      "68\n",
-      "H5Data\\data_set-ONI_IR_Depth-imgdim64x64.h5\n",
-      "Edits/ONI_Depth\n",
-      "ONI_IR_Depth\n",
-      "H5Data\\data_set-ONI_IR_Depth-imgdim64x64.h5\n",
-      "258\n",
-      "258\n",
-      "68\n",
-      "68\n"
+      "Edits/ZED_RGB\n",
+      "Edits/ZED_Depth\n",
+      "ZED_RGB_Edit\n",
+      "ZED_Depth_Edit\n",
+      "H5Data\\data_set-ZED_RGB_Edit-imgdim64x64.h5\n",
+      "Edits/ZED_RGB\n",
+      "ZED_RGB_Edit\n",
+      "H5Data\\data_set-ZED_RGB_Edit-imgdim64x64.h5\n",
+      "297\n",
+      "297\n",
+      "99\n",
+      "99\n",
+      "H5Data\\data_set-ZED_Depth_Edit-imgdim64x64.h5\n",
+      "Edits/ZED_Depth\n",
+      "ZED_Depth_Edit\n",
+      "H5Data\\data_set-ZED_Depth_Edit-imgdim64x64.h5\n",
+      "297\n",
+      "297\n",
+      "99\n",
+      "99\n"
      ]
     }
    ],
@@ -86,8 +86,8 @@
     "# dataset_creator on how to generate the H5PY file. \n",
     "\n",
     "# Name of the H5PY dataset \n",
-    "dset = [\"Edits/ONI_IR\", 'Edits/ONI_Depth'] #where the orginal data is stored \n",
-    "name = [\"ONI_IR_Edit\", \"ONI_IR_Depth\"] # name of the h5py file\n",
+    "dset = [ 'Edits/ZED_Depth', \"Edits/ONI_Depth\"] #where the orginal data is stored \n",
+    "name = [\"ZED_Depth_Edit\", 'ONI_IR_Depth'] # name of the h5py file\n",
     "path = \"H5Data\\Data_set-{}-imgdim64x64.h5\".format(name) # location of the h5py file\n",
     "# this will also window the data at a set size, and with the set stride \n",
     "\n",
@@ -111,11 +111,11 @@
     "        # first layer\n",
     "        self.ec1 = nn.Conv3d(1, 16, (5, 3, 3), stride=1, padding=(2, 1, 1),)\n",
     "        self.em1 = nn.MaxPool3d((1, 2, 2), return_indices=True)\n",
-    "        self.ed1 = nn.Dropout3d(p=0.25)\n",
+    "        #self.ed1 = nn.Dropout3d(p=0.25)\n",
     "        # second layer\n",
     "        self.ec2 = nn.Conv3d(16, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
     "        self.em2 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
-    "        self.ed2 = nn.Dropout3d(p=0.25)\n",
+    "        #self.ed2 = nn.Dropout3d(p=0.25)\n",
     "        # third layer\n",
     "        self.ec3 = nn.Conv3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
     "        self.em3 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
@@ -134,11 +134,11 @@
     "        # first layer\n",
     "        self.ec21 = nn.Conv3d(1, 16, (5, 3, 3), stride=1, padding=(2, 1, 1),)\n",
     "        self.em21 = nn.MaxPool3d((1, 2, 2), return_indices=True)\n",
-    "        self.ed21 = nn.Dropout3d(p=0.25)\n",
+    "        #self.ed21 = nn.Dropout3d(p=0.25)\n",
     "        # second layer\n",
     "        self.ec22 = nn.Conv3d(16, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
     "        self.em22 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
-    "        self.ed22 = nn.Dropout3d(p=0.25)\n",
+    "        #self.ed22 = nn.Dropout3d(p=0.25)\n",
     "        # third layer\n",
     "        self.ec23 = nn.Conv3d(8, 8, (5, 3, 3), stride=1, padding=(2, 1, 1))\n",
     "        self.em23 = nn.MaxPool3d((2, 2, 2), return_indices=True)\n",
@@ -161,11 +161,11 @@
     "        # (batch_size, chanels, depth, width, height)\n",
     "        _ec1 = F.relu(self.ec1(x1))\n",
     "        _em1, i1 = self.em1(_ec1)\n",
-    "        _ec1 = self.ed1(_ec1)\n",
+    "        #_ec1 = self.ed1(_ec1)\n",
     "        # second layer\n",
     "        _ec2 = F.relu(self.ec2(_em1))\n",
     "        _em2, i2 = self.em2(_ec2)\n",
-    "        _em2 = self.ed2(_em2)\n",
+    "        #_em2 = self.ed2(_em2)\n",
     "        # third layer\n",
     "        _ec3 = F.relu(self.ec3(_em2))\n",
     "        _em3, i3 = self.em3(_ec3)\n",
@@ -175,11 +175,11 @@
     "        # (batch_size, chanels, depth, width, height)\n",
     "        _ec21 = F.relu(self.ec21(x2))\n",
     "        _em21, i1 = self.em21(_ec21)\n",
-    "        _ec21 = self.ed21(_ec21)\n",
+    "        #_ec21 = self.ed21(_ec21)\n",
     "        # second layer\n",
     "        _ec22 = F.relu(self.ec22(_em21))\n",
     "        _em22, i2 = self.em22(_ec22)\n",
-    "        _em22 = self.ed22(_em22)\n",
+    "        #_em22 = self.ed22(_em22)\n",
     "        # third layer\n",
     "        _ec23 = F.relu(self.ec23(_em22))\n",
     "        _em23, i3 = self.em23(_ec23)\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
     "\n",
     "dropout = 0.25\n",
     "learning_rate = 0.0002\n",
-    "num_epochs = 20\n",
+    "num_epochs = 15\n",
     "chunk_size = 128\n",
     "forward_chunk = 8 \n",
     "forward_chunk_size = 8 # this is smaller due to memory constrains \n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,14 +390,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2020-12-15-10-43-18\nfoward pass occuring\n"
+      "2020-12-18-00-23-43\n",
+      "epoch [1/15], loss:0.0038\n",
+      "epoch [2/15], loss:0.0034\n",
+      "epoch [3/15], loss:0.0032\n",
+      "epoch [4/15], loss:0.0030\n",
+      "epoch [5/15], loss:0.0028\n",
+      "epoch [6/15], loss:0.0028\n",
+      "epoch [7/15], loss:0.0028\n",
+      "epoch [8/15], loss:0.0028\n",
+      "epoch [9/15], loss:0.0028\n",
+      "epoch [10/15], loss:0.0028\n",
+      "epoch [11/15], loss:0.0027\n",
+      "epoch [12/15], loss:0.0027\n",
+      "epoch [13/15], loss:0.0027\n",
+      "epoch [14/15], loss:0.0026\n",
+      "epoch [15/15], loss:0.0026\n",
+      "foward pass occuring\n"
      ]
     }
    ],
@@ -406,12 +422,12 @@
     "print(start_time)\n",
     "filepath = (\n",
     "    \"Models\\\\\"\n",
-    "    + 'MultiModalFusion'\n",
+    "    + 'MultiModalFusion_ZED_RGB_DEPTH'\n",
     "    + start_time\n",
     ")\n",
-    "filepath = 'Models\\MultiModalFusion2020-12-14-15-52-54'\n",
+    "#filepath = 'Models\\MultiModalFusion2020-12-14-15-52-54'\n",
     "#print(filepath)\n",
-    "#train_model(filepath)\n",
+    "train_model(filepath)\n",
     "import functions\n",
     "from functions import animate\n",
     "\n",
@@ -421,17 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "516\n",
-      "(516, 5, 8)\n",
+      "594\n",
+      "(594, 5, 8)\n",
       "saving\n",
-      "(516, 5, 8)\n",
+      "(594, 5, 8)\n",
       "saving\n"
      ]
     }
